<resources>
    <string name="app_name">Burner Chat</string>
    <string name="server">Servidor</string>
    <string name="hintMessage">Mensaje…</string>
    <string name="chat">Chat</string>
    <string name="textCancel">Cancelar</string>
    <string name="textAccept">Aceptar</string>
    <string name="textIncomingRequest">Quiero conectar</string>
    <string name="textThemeToggle">Cambiar tema</string>
    <string name="addContact">Añadir Contacto</string>
    <string name="usingKey">Mediante clave</string>
    <string name="introduceKey">Introduzca su clave</string>
    <string name="byQR">Mediante QR</string>
    <string name="scanQR">Escanear QR</string>
    <string name="textName">Nombre</string>
    <string name="textAdd">Añadir</string>
    <string name="textGoBack">Volver</string>
    <string name="textChats">Chats</string>
    <string name="textFirebase">Firebase</string>
    <string name="hintIntroduceMail">Introduzca su email</string>
    <string name="hintIntroducePassword">Introduzca su contraseña</string>
    <string name="textPassword">Password:</string>
    <string name="textEmail">Email:</string>
    <string name="textLogin">LogIn</string>
    <string name="textSignup">SignUp</string>
    <string name="textWebRTC">WebRTC</string>
    <string name="chooseBackend">Elija un backend</string>
    <string name="textMessagesPLC">Mensajes (PLACEHOLDER)</string>
    <string name="textUsername">Usuario</string>
    <string name="textPhoto">Foto</string>
    <string name="textNewName">Nuevo nombre…</string>
    <string name="textConfirm">Confirmar</string>
    <string name="textLastMessageSent">Último mensaje enviado</string>
    <string name="textDate">Fecha</string>
    <string name="textLanguageChanged">Los cambios se aplicarán en breve…</string>
    <string name="a_adir_chat_grupal">Añadir Chat Grupal</string>
    <string name="a_adir_chat_individual">Añadir Chat Individual</string>
    <string name="panic_message">¿Estás seguro de que deseas enviar la acción de pánico?</string>
    <string name="panic_mode">Modo del pánico</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="toggle_theme">Cambiar tema</string>
    <string name="group_chat_users">Seleccione los usuarios</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="chat_individual">Chat individual</string>
    <string name="chat_grupal">Chat grupal</string>
    <string name="new_chat_name">Nombre del chat</string>
    <string name="nombre_del_chat">Nombre del chat</string>
    <string name="search_user">Buscar usuario</string>
    <string name="users">Usuarios</string>
    <string name="update">Actualizar</string>
    <string name="log_out_confirmation">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="textError">Error</string>
    <string name="textLogoutError">No se pudo cerrar sesión. Inténtalo de nuevo.</string>
    <string name="text_add_user">Usuarios a añadir</string>
    <string name="buscar_persona">Buscar persona:</string>
    <string name="person_to_add">Persona a añadir</string>
</resources>