<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".firebase.views.chats.ChatInfoActivity">

    <ImageButton
        android:id="@+id/ibGoBackInfoChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivInfoChatIcon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/default_icon_128"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInfoChatName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivInfoChatIcon" />

    <EditText
        android:id="@+id/etInfoChatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button1"
        android:ems="10"
        android:hint="@string/chat"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibGoBackInfoChat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInfoUsers"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btUpdateChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button1"
        android:text="@string/update"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAddUsersInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_add_user"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvInfoUsers" />

    <EditText
        android:id="@+id/etSearchChatInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button1"
        android:ems="10"
        android:hint="@string/search_user"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddUsersInfo" />

    <ImageButton
        android:id="@+id/ibSearchChatInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button1"
        app:layout_constraintStart_toEndOf="@+id/etSearchChatInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvAddUsersInfo"
        app:srcCompat="@drawable/baseline_search_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddChatInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btUpdateChat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchChatInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>